--- a/mario game/index5.html
+++ b/mario game/index5.html
@@ -32,14 +32,22 @@
       lives: 3,
     };
 
-    const enemy = {
+    const ground = [
+      {x: 0, y: 300, width: 200, height: 100},
+      {x: 250, y: 200, width: 200, height: 100},
+      {x: 500, y: 100, width: 300, height: 100},
+    ];
+
+    const enemyTemplate = {
       width: 20,
       height: 20,
       color: 'blue',
       speed: 2,
-      x: canvas.width,
-      y: canvas.height - 20,
     };
+
+    const enemies = Array.from({length: 10}, (_, i) => {
+      return {...enemyTemplate, x: (i + 1) * 100, y: canvas.height - enemyTemplate.height, direction: -1};
+    });
 
     let score = 0;
     let gameWon = false;
@@ -86,7 +94,9 @@
       gameOver = false;
       playAgainButton = false;
       player.lives = 3;
-      enemy.x = canvas.width;
+      enemies.forEach((enemy, i) => {
+        enemy.x = (i + 1) * 100;
+      });
     }
 
     function update() {
@@ -102,80 +112,106 @@
       }
       player.velocity += player.gravity;
       player.y += player.velocity;
-      if (player.y >= canvas.height - player.height) {
-        player.y = canvas.height - player.height;
-        player.grounded = true;
-        player.velocity = 0;
-      }
-      enemy.x -= enemy.speed;
-      if (enemy.x < -enemy.width) {
-        enemy.x = canvas.width;
-      }
 
-      if (
-        player.x < enemy.x + enemy.width &&
-        player.x + player.width > enemy.x &&
-        player.y < enemy.y + enemy.height &&
-        player.y + player.height > enemy.y
-      ) {
-        if (player.y + player.height * 0.8 < enemy.y) {
-          score++;
-          enemy.x = canvas.width;
-          if (score === 5) {
-            gameWon = true;
-            playAgainButton = true;
-          }
-        } else {
-          player.lives--;
-          enemy.x = canvas.width;
-          if (player.lives === 0) {
-            gameOver = true;
-            playAgainButton = true;
-          }
+      let onGround = false;
+      for (const platform of ground) {
+        if (
+          player.x < platform.x + platform.width &&
+          player.x + player.width > platform.x &&
+          player.y + player.height >= platform.y &&
+          player.y + player.height <= platform.y + platform.height &&
+      player.velocity >= 0
+    ) {
+      player.y = platform.y - player.height;
+      onGround = true;
+      break;
+    }
+  }
+
+  if (onGround) {
+    player.grounded = true;
+    player.velocity = 0;
+  } else {
+    player.grounded = false;
+  }
+
+  for (const enemy of enemies) {
+    enemy.x += enemy.direction * enemy.speed;
+
+    if (enemy.x < 0 || enemy.x + enemy.width > canvas.width) {
+      enemy.direction *= -1;
+    }
+
+    if (
+      player.x < enemy.x + enemy.width &&
+      player.x + player.width > enemy.x &&
+      player.y < enemy.y + enemy.height &&
+      player.y + player.height > enemy.y
+    ) {
+      if (player.y + player.height * 0.8 < enemy.y) {
+        score++;
+        enemy.x = canvas.width + Math.random() * canvas.width;
+        if (score === 5) {
+          gameWon = true;
+          playAgainButton = true;
+        }
+      } else {
+        player.lives--;
+        enemy.x = canvas.width + Math.random() * canvas.width;
+        if (player.lives === 0) {
+          gameOver = true;
+          playAgainButton = true;
         }
       }
     }
+  }
+}
 
-    function draw() {
-      ctx.clearRect(0, 0, canvas.width, canvas.height);
+function draw() {
+  ctx.clearRect(0, 0, canvas.width, canvas.height);
 
-      // Draw player
-      ctx.fillStyle = player.color;
-      ctx.fillRect(player.x, player.y, player.width, player.height);
+  // Draw player
+  ctx.fillStyle = player.color;
+  ctx.fillRect(player.x, player.y, player.width, player.height);
 
-      // Draw enemy
-      ctx.fillStyle = enemy.color;
-      ctx.fillRect(enemy.x, enemy.y, enemy.width, enemy.height);
+  // Draw ground
+  ctx.fillStyle = 'brown';
+  for (const platform of ground) {
+    ctx.fillRect(platform.x, platform.y, platform.width, platform.height);
+  }
 
-      // Draw score
-      ctx.font = '20px Arial';
-      ctx.fillStyle = 'black';
-      ctx.fillText('Score: ' + score, canvas.width - 100, 30);
-      ctx.fillText('Lives: ' + player.lives, 20, 30);
+  // Draw enemies
+  for (const enemy of enemies) {
+    ctx.fillStyle = enemy.color;
+    ctx.fillRect(enemy.x, enemy.y, enemy.width, enemy.height);
+  }
 
-      // Draw message and play again button
-      if (gameWon || gameOver) {
-        ctx.font = '32px Arial';
-        ctx.fillText(gameWon ? 'You win.' : 'Sorry, game over.', canvas.width / 2 - 120, canvas.height / 2 - 60);
+  // Draw score
+  ctx.font = '20px Arial';
+  ctx.fillStyle = 'black';
+  ctx.fillText('Score: ' + score, canvas.width - 100, 30);
+  ctx.fillText('Lives: ' + player.lives, 20, 30);
 
-        ctx.fillStyle = 'green';
-        ctx.fillRect(canvas.width / 2 - 100, canvas.height / 2, 200, 60);
-        ctx.fillStyle = 'white';
-        ctx.font = '24px Arial';
-        ctx.fillText('Play Again?', canvas.width / 2 - 70, canvas.height / 2 + 35);
-        playAgainButton = true;
-      }
-    }
+  // Draw message and play again button
+  if (gameWon || gameOver) {
+    ctx.font = '32px Arial';
+    ctx.fillText(gameWon ? 'You win.' : 'Sorry, game over.', canvas.width / 2 - 120, canvas.height / 2 - 60);
 
-    function gameLoop() {
-      if (!gameWon && !gameOver) {
-        update();
-      }
-      draw();
-      requestAnimationFrame(gameLoop);
-    }
+    ctx.fillStyle = 'green';
+    ctx.fillRect(canvas.width / 2 - 100, canvas.height / 2, 200, 60);
+    ctx.fillStyle = 'white';
+    ctx.font = '24px Arial';
+    ctx.fillText('Play Again?', canvas.width / 2 - 70, canvas.height / 2 + 35);
+    playAgainButton = true;
+  }
+}
 
-    gameLoop();
-  </script>
-</body>
-</html>
+function gameLoop() {
+  if (!gameWon && !gameOver) {
+    update();
+  }
+  draw();
+  requestAnimationFrame(gameLoop);
+}
+
+gameLoop();
